# Crespo_Luis_ExamenCPP

./: CMakeLists.txt  README.md
Ejercicio 1/: funcnum.cpp  funcnum.h  main1.cpp
Ejercicio 2/: main2.cpp  numsemana.cpp  numsemana.h
Ejercicio 3/: main3.cpp  medianotas.cpp  medianotas.h
Ejercicio 4/: calcularpromocion.cpp  calcularpromocion.h  main4.cpp
