cmake_minimum_required(VERSION 3.29)

project(Parcial-1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ejercicio1
        "Ejercicio 1/main1.cpp"
        "Ejercicio 1/funcnum.cpp"
        "Ejercicio 1/funcnum.h"

)
add_executable(Ejercicio2
        "Ejercicio 2/main2.cpp"
        "Ejercicio 2/numsemana.cpp"
        "Ejercicio 2/numsemana.h"

)
add_executable(Ejercicio3
        "Ejercicio 3/main3.cpp"

)
add_executable(Ejercicio4
        "Ejercicio 4/main4.cpp"

)